--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="error"></div>
           </div>
           <div class="form3 form">
-            <label for="address">Address:</label>
+            <label for="address">Address: 9</label>
             <input
               type="text"
               placeholder="No.37 worldbank housing"
